--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	    <h1 role="heading">My Portfolio</h1>
+
+    <!-- Navigation bar with ARIA role -->
+    <nav role="navigation">
+        <ul role="list">
+            <li role="listitem"><a href="#about">About Me</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Image with ARIA role and alt attribute -->
+    <img role="img" src="profile.jpg" alt="Profile Picture of Me">
+
+    <!-- Brief description -->
+    <p>Hello! I'm a frontend developer passionate about creating accessible and user-friendly web experiences.</p>
+
+    <!-- List of skills with ARIA roles -->
+    <ul role="list">
+        <li role="listitem">HTML, CSS, JavaScript</li>
+        <li role="listitem">React.js & Next.js</li>
+        <li role="listitem">Node.js & Express</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
